fixed styles for nowplaying section on mobile

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,9 @@
+@import '../../styles/variables.scss';
+
 .now-playing {
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   height: 50px;
   margin: 10px 0;
 
@@ -16,10 +19,32 @@
   }
 
   .song-name {
-    margin: 0 5px;
+    margin: 0 0 0 5px;
   }
 
   .artist {
     margin: 0 1px 0 5px;
+  }
+
+  @media screen and (max-width: $mobile) {
+    height: auto;
+
+    .album-cover {
+      flex: 1 0 100%;
+    }
+    
+    .now-listening {
+      flex: 1 0 100%;
+      margin: 5px 0;
+    }
+
+    .artist,
+    .song-name {
+      font-size: 13px;
+    }
+
+    .artist {
+      margin: 0;
+    }
   }
 }
